Override Library will always return to Object Mode after saving file in Pose Mode #73250

Closed
opened 2020-01-20 07:58:10 +01:00 by Aditia A. Pratama · 11 comments

System Information
Operating system: Windows 10
Graphics card: GTX 965M

Blender Version
Broken: (example: 2.81a, f1aa4d18d4, release, 2019-12-04)
Worked: (optional)

Short description of error
Override Library will always return to Object Mode after saving file in Pose Mode

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).

override_pose_mode_bug.zip

  1. Extract attached zip file
  2. open override_orig.blend file
  3. enter pose mode, then save
  4. reopen override_orig.blend, and now we're back in object mode

Along with attached files, there are also proxy_orig.blend which will stay to last user mode after save and reopening the file.

**System Information** Operating system: Windows 10 Graphics card: GTX 965M **Blender Version** Broken: (example: 2.81a, f1aa4d18d49d, release, 2019-12-04) Worked: (optional) **Short description of error** Override Library will always return to Object Mode after saving file in Pose Mode **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible). [override_pose_mode_bug.zip](https://archive.blender.org/developer/F8289181/override_pose_mode_bug.zip) 1. Extract attached zip file 2. open override_orig.blend file 3. enter pose mode, then save 4. reopen override_orig.blend, and now we're back in object mode Along with attached files, there are also proxy_orig.blend which will stay to last user mode after save and reopening the file.
Author
Member

Added subscriber: @AditiaA.Pratama

Added subscriber: @AditiaA.Pratama

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2020-01-20 20:47:12 +01:00

Yeah am aware of this, that’s almost more like a known limitation currently, although this should be fixed at some point for sure.

Yeah am aware of this, that’s almost more like a known limitation currently, although this should be fixed at some point for sure.

Setting this to known issues, supporting object mode in overrides will require quite some work (this RNA property is not editable currently).

Setting this to known issues, supporting object mode in overrides will require quite some work (this RNA property is not editable currently).

Added subscriber: @DavidKerdudo

Added subscriber: @DavidKerdudo

Hello, I wonder if a full armature data overrided is planned (like switch POSE/REST mode, layers, pose lib ... ) ? Because, now, with armature data linked, we can already add new "poses lib" but can't move bones on layers or change some "viewport display" properties.

Thanks.

Armature data linked

screen_armature_data_linked.png

Armature data overrided

screen_armature_data_overrided.png

Hello, I wonder if a full armature data overrided is planned (like switch POSE/REST mode, layers, pose lib ... ) ? Because, now, with armature data linked, we can already add new "poses lib" but can't move bones on layers or change some "viewport display" properties. Thanks. Armature data linked ![screen_armature_data_linked.png](https://archive.blender.org/developer/F8711343/screen_armature_data_linked.png) Armature data overrided ![screen_armature_data_overrided.png](https://archive.blender.org/developer/F8711344/screen_armature_data_overrided.png)

Added subscriber: @TakeshiFunahashi

Added subscriber: @TakeshiFunahashi

Though I do not care it is confirmed as Low, but please do not forget this need to be solved.

For character over-ride,, it make user feel un-stable (though over-ride already enhanced mach). I do not expect, it force to change pose mode to object mode when open.
so untill I found this topic, I checked all add on it seems related this issue.

Though I do not care it is confirmed as Low, but please do not forget this need to be solved. For character over-ride,, it make user feel un-stable (though over-ride already enhanced mach). I do not expect, it force to change pose mode to object mode when open. so untill I found this topic, I checked all add on it seems related this issue.

This issue was referenced by 2e06c223cc

This issue was referenced by 2e06c223cc1ff386e4b108c6733795c1fc931d83

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73250
No description provided.