Fix T73250: Override Library will always return to Object Mode on file opening.

Was an old known annoying issue, since the matching RNA property is
read-only we need a manual handling of this in override applying and
resyncing code.